// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Block default 1`] = `
<section
  className="sc-bdVaJa jfLXUy"
/>
`;

exports[`Storyshots Block with props 1`] = `
<section
  className="sc-bdVaJa hJArmY"
  display="block"
  height="300px"
  opacity=""
  order=""
  overflow="visible"
  size=""
  width="300px"
>
  <p
    className="sc-bwzfXH eGaMJv"
    color="black"
  >
    Text
  </p>
</section>
`;

exports[`Storyshots Box default 1`] = `
<div
  className="sc-htpNat bdCMgu"
  height="200px"
  width="300px"
/>
`;

exports[`Storyshots Box with props 1`] = `
<div
  className="sc-htpNat iXRSeO"
  display="block"
  height="100vh"
  opacity=""
  order=""
  overflow="visible"
  size="300px"
  width="100%"
>
  <p
    className="sc-bwzfXH eGaMJv"
    color="black"
  >
    Text
  </p>
</div>
`;

exports[`Storyshots Button default 1`] = `
<button
  className="sc-bxivhb KIirr"
  onClick={[Function]}
>
  Default
</button>
`;

exports[`Storyshots Button outline 1`] = `
<button
  className="sc-bxivhb kEvVkH"
  onClick={[Function]}
>
  Outline
</button>
`;

exports[`Storyshots Button with props 1`] = `
<section
  className="sc-bdVaJa bBZzzW"
  display="flex"
>
  <button
    className="sc-bxivhb kQIOXz"
    display="block"
    height=""
    onClick={[Function]}
    opacity=""
    order=""
    overflow="visible"
    size=""
    width=""
  >
    With Props
  </button>
</section>
`;

exports[`Storyshots Card default 1`] = `
<div
  className="sc-ifAKCX gJHtEF"
/>
`;

exports[`Storyshots Card with content horizontal 1`] = `
<div
  className="sc-ifAKCX hlsfWv"
>
  <div
    className="sc-EHOje JJZeW"
    width="100%"
  />
  <div
    className="sc-EHOje hVIkx"
  >
    <p
      className="sc-bwzfXH IvFAP"
    >
      The Moon
    </p>
    <p
      className="sc-bwzfXH cfCdyf"
    >
      The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
    </p>
    <button
      className="sc-bxivhb KIirr"
      onClick={[Function]}
    >
      Read more
    </button>
  </div>
</div>
`;

exports[`Storyshots Card with content vertical 1`] = `
<div
  className="sc-ifAKCX jjkobi"
>
  <div
    className="sc-EHOje icUxXM"
    width="100%"
  />
  <div
    className="sc-EHOje dfEJSC"
  >
    <p
      className="sc-bwzfXH IvFAP"
    >
      The Moon
    </p>
    <p
      className="sc-bwzfXH cfCdyf"
    >
      The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
    </p>
    <button
      className="sc-bxivhb KIirr"
      onClick={[Function]}
    >
      Read more
    </button>
  </div>
</div>
`;

exports[`Storyshots Card with props 1`] = `
<div
  className="sc-ifAKCX AgXCk"
  display="block"
  height=""
  opacity=""
  order=""
  overflow="auto"
  size=""
  width=""
>
  <div
    className="sc-EHOje icUxXM"
    width="100%"
  />
  <div
    className="sc-EHOje dfEJSC"
  >
    <p
      className="sc-bwzfXH IvFAP"
    >
      The Moon
    </p>
    <p
      className="sc-bwzfXH cfCdyf"
    >
      The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
    </p>
    <button
      className="sc-bxivhb KIirr"
      onClick={[Function]}
    >
      Read more
    </button>
  </div>
</div>
`;

exports[`Storyshots Carousel default 1`] = `
<div
  className="sc-htpNat dIELUv"
>
  <div
    className="sc-htpNat dladRg"
    height="400px"
  >
    <div
      className="slick-slider slick-initialized"
      dir="ltr"
    >
      <div
        className="slick-list"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={null}
        onMouseMove={null}
        onMouseUp={[Function]}
        onTouchCancel={null}
        onTouchEnd={[Function]}
        onTouchMove={null}
        onTouchStart={[Function]}
        style={Object {}}
      >
        <div
          className="slick-track"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "WebkitTransform": "translate3d(0px, 0px, 0px)",
              "WebkitTransition": "",
              "msTransform": "translateX(0px)",
              "opacity": 1,
              "transform": "translate3d(0px, 0px, 0px)",
              "transition": "",
            }
          }
        >
          <div
            aria-hidden={true}
            className="slick-slide slick-cloned"
            data-index={-1}
            onClick={[Function]}
            style={
              Object {
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={false}
            className="slick-slide slick-active slick-current"
            data-index={0}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://www.jpl.nasa.gov/images/mars/20160421/PIA00407-16.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={1}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://photojournal.jpl.nasa.gov/jpeg/PIA18182.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={2}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide slick-cloned"
            data-index={3}
            onClick={[Function]}
            style={
              Object {
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://www.jpl.nasa.gov/images/mars/20160421/PIA00407-16.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide slick-cloned"
            data-index={4}
            onClick={[Function]}
            style={
              Object {
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://photojournal.jpl.nasa.gov/jpeg/PIA18182.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide slick-cloned"
            data-index={5}
            onClick={[Function]}
            style={
              Object {
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
        </div>
      </div>
      <ul
        className="slick-dots"
        onMouseEnter={null}
        onMouseLeave={null}
        onMouseOver={null}
        style={
          Object {
            "display": "block",
          }
        }
      >
        <li
          className="slick-active"
        >
          <button
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li
          className=""
        >
          <button
            onClick={[Function]}
          >
            2
          </button>
        </li>
        <li
          className=""
        >
          <button
            onClick={[Function]}
          >
            3
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel with props 1`] = `
<div
  className="sc-htpNat dIELUv"
>
  <div
    className="sc-htpNat itsFI"
    display="block"
    height=""
    size=""
    width=""
  >
    <div
      className="slick-slider slick-initialized"
      dir="ltr"
    >
      <div
        className="slick-list"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={null}
        onMouseMove={null}
        onMouseUp={[Function]}
        onTouchCancel={null}
        onTouchEnd={[Function]}
        onTouchMove={null}
        onTouchStart={[Function]}
        style={Object {}}
      >
        <div
          className="slick-track"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "WebkitTransform": "translate3d(0px, 0px, 0px)",
              "WebkitTransition": "",
              "msTransform": "translateX(0px)",
              "opacity": 1,
              "transform": "translate3d(0px, 0px, 0px)",
              "transition": "",
            }
          }
        >
          <div
            aria-hidden={true}
            className="slick-slide slick-cloned"
            data-index={-1}
            onClick={[Function]}
            style={
              Object {
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={false}
            className="slick-slide slick-active slick-current"
            data-index={0}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://www.jpl.nasa.gov/images/mars/20160421/PIA00407-16.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={1}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://photojournal.jpl.nasa.gov/jpeg/PIA18182.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide"
            data-index={2}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide slick-cloned"
            data-index={3}
            onClick={[Function]}
            style={
              Object {
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://www.jpl.nasa.gov/images/mars/20160421/PIA00407-16.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide slick-cloned"
            data-index={4}
            onClick={[Function]}
            style={
              Object {
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://photojournal.jpl.nasa.gov/jpeg/PIA18182.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            aria-hidden={true}
            className="slick-slide slick-cloned"
            data-index={5}
            onClick={[Function]}
            style={
              Object {
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <img
                className="sc-bZQynM MrWCD"
                height="400px"
                src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              />
            </div>
          </div>
        </div>
      </div>
      <ul
        className="slick-dots"
        onMouseEnter={null}
        onMouseLeave={null}
        onMouseOver={null}
        style={
          Object {
            "display": "block",
          }
        }
      >
        <li
          className="slick-active"
        >
          <button
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li
          className=""
        >
          <button
            onClick={[Function]}
          >
            2
          </button>
        </li>
        <li
          className=""
        >
          <button
            onClick={[Function]}
          >
            3
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex default 1`] = `
<div
  className="sc-EHOje cBQBNH"
/>
`;

exports[`Storyshots Flex with card 1`] = `
<div
  className="sc-ifAKCX jjkobi"
>
  <div
    className="sc-EHOje icUxXM"
    width="100%"
  />
  <div
    className="sc-EHOje dfEJSC"
  >
    <p
      className="sc-bwzfXH IvFAP"
    >
      The Moon
    </p>
    <p
      className="sc-bwzfXH cfCdyf"
    >
      The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
    </p>
    <div
      className="sc-EHOje cBQBNH"
    >
      <button
        className="sc-bxivhb jSsEvS"
        onClick={[Function]}
      >
        First
      </button>
      <button
        className="sc-bxivhb jSsEvS"
        onClick={[Function]}
      >
        Second
      </button>
      <button
        className="sc-bxivhb KIirr"
        onClick={[Function]}
      >
        Third
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex with props 1`] = `
<div
  className="sc-EHOje dfpEoV"
  display="flex"
  height="300px"
  opacity=""
  order=""
  overflow="visible"
  size=""
  width="300px"
>
  <p
    className="sc-bwzfXH eGaMJv"
    color="black"
  >
    Text
  </p>
</div>
`;

exports[`Storyshots Grid default 1`] = `
<div
  className="sc-gzVnrw dAhgrE"
/>
`;

exports[`Storyshots Grid with boxes 1`] = `
<div
  className="sc-gzVnrw SeKZY"
>
  <div
    className="sc-htpNat cXiSzu"
  >
    <p
      className="sc-bwzfXH ckhCRh"
    >
      Although we will never watch two suns rise and fall from the perspective of our own planet, like Luke Skywalker on Tatooine in the iconic scene from Star Wars: A New Hope, theres a newly discovered planet where aliens might do so.
    </p>
  </div>
  <div
    className="sc-htpNat doUMgF"
  />
  <div
    className="sc-htpNat bxcYBK"
  />
  <div
    className="sc-htpNat bxcYBK"
  />
  <div
    className="sc-gzVnrw hfznUU"
  >
    <div
      className="sc-htpNat bxcYBK"
    />
    <div
      className="sc-htpNat bxcYBK"
    />
    <div
      className="sc-htpNat bxcYBK"
    />
    <div
      className="sc-htpNat bxcYBK"
    />
  </div>
  <div
    className="sc-htpNat bxcYBK"
  />
  <div
    className="sc-htpNat doUMgF"
  />
  <div
    className="sc-htpNat bxcYBK"
  />
  <div
    className="sc-htpNat bxcYBK"
  />
</div>
`;

exports[`Storyshots Grid with cards 1`] = `
<div
  className="sc-gzVnrw ijaOjP"
>
  <div
    className="sc-ifAKCX jjkobi"
  >
    <div
      className="sc-gzVnrw cYTfyG"
      width="100%"
    />
    <div
      className="sc-gzVnrw iYthWk"
    >
      <p
        className="sc-bwzfXH IvFAP"
      >
        The Moon
      </p>
      <p
        className="sc-bwzfXH cfCdyf"
      >
        The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
      </p>
      <div
        className="sc-gzVnrw dAhgrE"
      >
        <button
          className="sc-bxivhb TxZMR"
          onClick={[Function]}
        >
          First
        </button>
      </div>
    </div>
  </div>
  <div
    className="sc-ifAKCX jjkobi"
  >
    <div
      className="sc-gzVnrw cYTfyG"
      width="100%"
    />
    <div
      className="sc-gzVnrw iYthWk"
    >
      <p
        className="sc-bwzfXH IvFAP"
      >
        The Moon
      </p>
      <p
        className="sc-bwzfXH cfCdyf"
      >
        The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
      </p>
      <div
        className="sc-gzVnrw dAhgrE"
      >
        <button
          className="sc-bxivhb gqLGyR"
          onClick={[Function]}
        >
          First
        </button>
      </div>
    </div>
  </div>
  <div
    className="sc-ifAKCX jjkobi"
  >
    <div
      className="sc-gzVnrw cYTfyG"
      width="100%"
    />
    <div
      className="sc-gzVnrw iYthWk"
    >
      <p
        className="sc-bwzfXH IvFAP"
      >
        The Moon
      </p>
      <p
        className="sc-bwzfXH cfCdyf"
      >
        The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
      </p>
      <div
        className="sc-gzVnrw dAhgrE"
      >
        <button
          className="sc-bxivhb iTIccW"
          onClick={[Function]}
        >
          First
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid with image 1`] = `
<div
  className="sc-gzVnrw eMDpkn"
>
  <img
    className="sc-bZQynM bQVwYU"
    src="https://www.jpl.nasa.gov/images/mars/20160421/PIA00407-16.jpg"
  />
  <img
    className="sc-bZQynM bQVwYU"
    src="https://photojournal.jpl.nasa.gov/jpeg/PIA18182.jpg"
  />
  <img
    className="sc-bZQynM bQVwYU"
    src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
  />
  <img
    className="sc-bZQynM bQVwYU"
    src="https://cdn.mos.cms.futurecdn.net/DfcnU8Z2yeyrYLmsRCKtDH.jpg"
  />
  <img
    className="sc-bZQynM bQVwYU"
    src="https://solarsystem.nasa.gov/system/downloadable_items/1193_pluto_natural_color_20150714_detail.jpg"
  />
  <img
    className="sc-bZQynM bQVwYU"
    src="https://solarsystem.nasa.gov/system/resources/detail_files/771_PIA16853.jpg"
  />
</div>
`;

exports[`Storyshots Grid with props 1`] = `
<div
  className="sc-gzVnrw hFhqFS"
  display="flex"
  height="300px"
  opacity=""
  order=""
  overflow="visible"
  size=""
  width="300px"
>
  <p
    className="sc-bwzfXH eGaMJv"
    color="black"
  >
    Text
  </p>
</div>
`;

exports[`Storyshots Hr default 1`] = `
Array [
  "Content",
  <div
    className="sc-htoDjs jKTAkO"
  />,
  "Content",
]
`;

exports[`Storyshots Hr variants 1`] = `
Array [
  "Big",
  <div
    className="sc-htoDjs cFbkbi"
  />,
  "Small",
  <div
    className="sc-htoDjs cbkHAy"
  />,
  "Content",
]
`;

exports[`Storyshots Hr with props 1`] = `
Array [
  "Content",
  <div
    className="sc-htoDjs RUNeF"
    display="block"
    height="1px"
    opacity=""
    order=""
    width="100px"
  />,
  "Content",
]
`;

exports[`Storyshots Image adaptive 1`] = `
<img
  className="sc-bZQynM htKFFG"
  height="400px"
  src="https://picsum.photos/500"
  width="500px"
/>
`;

exports[`Storyshots Image fluid 1`] = `
<img
  className="sc-bZQynM cwdfuR"
  src="https://picsum.photos/1800"
/>
`;

exports[`Storyshots Image thumb 1`] = `
<img
  className="sc-bZQynM itTeq"
  src="https://picsum.photos/500"
/>
`;

exports[`Storyshots Image with props 1`] = `
<img
  className="sc-bZQynM jCWoZG"
  display="block"
  height="500px"
  opacity=""
  order=""
  src="https://picsum.photos/500"
  width="400px"
/>
`;

exports[`Storyshots Input basic 1`] = `
<section
  className="sc-bdVaJa kIzjwD"
  display="flex"
>
  <input
    className="sc-dnqmqq iDoEii"
    onChange={[Function]}
  />
</section>
`;

exports[`Storyshots Input white 1`] = `
<input
  className="sc-dnqmqq iDoEii"
  onChange={[Function]}
/>
`;

exports[`Storyshots Link default 1`] = `
<a
  className="sc-iwsKbI cTpSRt"
  href="https://quarkly.space/"
>
  Quarkly
</a>
`;

exports[`Storyshots Link with props 1`] = `
<a
  className="sc-iwsKbI iEIcXY"
  color="#007bff"
  fontFamily=""
  fontSize=""
  fontStyle="normal"
  fontWeight="normal"
  href="https://quarkly.space/"
  letterSpacing=""
  name=""
  opacity=""
  order=""
  overflow="visible"
  target="_self"
  title=""
>
  Some text...
</a>
`;

exports[`Storyshots Link with text 1`] = `
<a
  className="sc-iwsKbI kLzvHa"
  color="#007bff"
  href="https://quarkly.space/"
>
  <p
    className="sc-bwzfXH gRNkxV"
    color="#007bff"
  >
    Quarkly
  </p>
</a>
`;

exports[`Storyshots List default 1`] = `
<ul
  className="sc-gZMcBi iCsCvF"
>
  <li>
    <p
      className="sc-bwzfXH cokOUe"
    >
      Item 1
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH cokOUe"
    >
      Item 2
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH cokOUe"
    >
      Item 3
    </p>
  </li>
</ul>
`;

exports[`Storyshots List horizontal 1`] = `
<ul
  className="sc-gZMcBi iCsCvF"
>
  <li>
    <p
      className="sc-bwzfXH cokOUe"
    >
      Item 1
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH cokOUe"
    >
      Item 2
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH cokOUe"
    >
      Item 3
    </p>
  </li>
</ul>
`;

exports[`Storyshots List with props 1`] = `
<ul
  className="sc-gZMcBi iCsCvF"
>
  <li>
    <p
      className="sc-bwzfXH cokOUe"
    >
      Item 1
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH cokOUe"
    >
      Item 2
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH cokOUe"
    >
      Item 3
    </p>
  </li>
</ul>
`;

exports[`Storyshots Select basic 1`] = `
<section
  className="sc-bdVaJa kIzjwD"
  display="flex"
>
  <select
    className="sc-gqjmRU hnZXkc"
  >
    <option
      className="sc-VigVT fIhGog"
      value="hello"
    >
      hello
    </option>
    <option
      className="sc-VigVT fIhGog"
      value="world"
    >
      world
    </option>
  </select>
</section>
`;

exports[`Storyshots Select black 1`] = `
<select
  className="sc-gqjmRU jLLGQu"
>
  <option
    className="sc-VigVT fIhGog"
    value="hello"
  >
    hello
  </option>
  <option
    className="sc-VigVT fIhGog"
    value="world"
  >
    world
  </option>
</select>
`;

exports[`Storyshots Spacer 10rem 1`] = `
Array [
  "Content",
  <div
    className="sc-jTzLTM fQrzLz"
    height="10rem"
  />,
  "Content",
]
`;

exports[`Storyshots Spacer 25% 1`] = `
Array [
  "Content",
  <div
    className="sc-jTzLTM LTjsE"
    height="25%"
  />,
  "Content",
]
`;

exports[`Storyshots Spacer 50vh 1`] = `
Array [
  "Content",
  <div
    className="sc-jTzLTM eJeNwB"
    height="50vh"
  />,
  "Content",
]
`;

exports[`Storyshots Spacer 100px 1`] = `
Array [
  "Content",
  <div
    className="sc-jTzLTM kUOdtD"
    height="100px"
  />,
  "Content",
]
`;

exports[`Storyshots Spacer adaptive 1`] = `
Array [
  "Content",
  <div
    className="sc-jTzLTM esROeK"
    height={
      Array [
        "100px",
        "200px",
        "400px",
      ]
    }
  />,
  "Content",
]
`;

exports[`Storyshots Spacer default 1`] = `
Array [
  "Content",
  <div
    className="sc-jTzLTM cpNlkv"
  />,
  "Content",
]
`;

exports[`Storyshots Spacer variants 1`] = `
Array [
  "Big",
  <div
    className="sc-jTzLTM iOYUhi"
  />,
  "Small",
  <div
    className="sc-jTzLTM iKjaXX"
  />,
  "Content",
]
`;

exports[`Storyshots Tabs constructor 1`] = `
<section
  className="sc-bdVaJa kdxHJG"
>
  <div
    className="sc-jzJRlG XEsbO"
  >
    <div
      className="sc-htpNat dYvtaT"
      role="tabnav"
    >
      <button
        className="active sc-bxivhb fIBsYc"
        onClick={[Function]}
      >
        Основное
      </button>
      <button
        className="sc-bxivhb ddwoJH"
        onClick={[Function]}
      >
        Лэйаут
      </button>
      <button
        className="sc-bxivhb ddwoJH"
        onClick={[Function]}
      >
        Отступы
      </button>
      <button
        className="sc-bxivhb ddwoJH"
        onClick={[Function]}
      >
        Flex
      </button>
      <button
        className="sc-bxivhb ddwoJH"
        onClick={[Function]}
      >
        Grid
      </button>
      <button
        className="sc-bxivhb ddwoJH"
        onClick={[Function]}
      >
        Фон
      </button>
      <button
        className="sc-bxivhb ddwoJH"
        onClick={[Function]}
      >
        Разное
      </button>
      <button
        className="sc-bxivhb ddwoJH"
        onClick={[Function]}
      >
        Позиция
      </button>
    </div>
    <div
      className="sc-htpNat khVXnu"
      role="tabs"
    >
      <div
        className="sc-fjdhpX cIaEQc"
      >
        <div
          className="sc-htpNat fcjVhU"
          display="flex"
        >
          <p
            className="sc-bwzfXH fHfGto"
            color="white"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </div>
      </div>
      <div
        className="sc-fjdhpX djZNwv"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH EuPJX"
            color="white"
          >
            Содержимое категории Лэйаут
          </p>
        </div>
      </div>
      <div
        className="sc-fjdhpX djZNwv"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH EuPJX"
            color="white"
          >
            Содержимое категории Отступы
          </p>
        </div>
      </div>
      <div
        className="sc-fjdhpX djZNwv"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH EuPJX"
            color="white"
          >
            Содержимое категории Flex
          </p>
        </div>
      </div>
      <div
        className="sc-fjdhpX djZNwv"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH EuPJX"
            color="white"
          >
            Содержимое категории Grid
          </p>
        </div>
      </div>
      <div
        className="sc-fjdhpX djZNwv"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH EuPJX"
            color="white"
          >
            Содержимое категории Фон
          </p>
        </div>
      </div>
      <div
        className="sc-fjdhpX djZNwv"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH EuPJX"
            color="white"
          >
            Содержимое категории Разное
          </p>
        </div>
      </div>
      <div
        className="sc-fjdhpX djZNwv"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH EuPJX"
            color="white"
          >
            Содержимое категории Позиция
          </p>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Text adaptive 1`] = `
<p
  className="sc-bwzfXH dwaOiO"
  color={
    Array [
      "black",
      "gray",
      "lightgrey",
    ]
  }
  fontSize={
    Array [
      "36px",
      "54px",
      "72px",
    ]
  }
>
  Display1
</p>
`;

exports[`Storyshots Text default 1`] = `
<p
  className="sc-bwzfXH cfCdyf"
>
  Base text
</p>
`;

exports[`Storyshots Text variants 1`] = `
Array [
  <p
    className="sc-bwzfXH ccDxDc"
  >
    Display1
  </p>,
  <p
    className="sc-bwzfXH iXiRaq"
  >
    Display2
  </p>,
  <p
    className="sc-bwzfXH jINxTD"
  >
    Display3
  </p>,
  <p
    className="sc-bwzfXH kquLJc"
  >
    Display4
  </p>,
  <p
    className="sc-bwzfXH cfbxbm"
  >
    Heading1
  </p>,
  <p
    className="sc-bwzfXH ckhCRh"
  >
    Heading2
  </p>,
  <p
    className="sc-bwzfXH fNFKJa"
  >
    Heading3
  </p>,
  <p
    className="sc-bwzfXH kGhikM"
  >
    Heading4
  </p>,
  <p
    className="sc-bwzfXH eqbYrj"
  >
    Heading5
  </p>,
  <p
    className="sc-bwzfXH fcJQjl"
  >
    Heading6
  </p>,
  <p
    className="sc-bwzfXH ekzwKU"
  >
    Lead paragraph
  </p>,
  <p
    className="sc-bwzfXH cfCdyf"
  >
    Base text
  </p>,
]
`;

exports[`Storyshots Text with props 1`] = `
<p
  className="sc-bwzfXH dzFepw"
  color="black"
  fontFamily=""
  fontSize=""
  fontStyle="normal"
  fontWeight="normal"
  letterSpacing=""
  opacity=""
  order=""
  overflow="visible"
>
  Some text...
</p>
`;

exports[`Storyshots Theme with di 1`] = `
Array [
  <button
    className="sc-bxivhb gGIZFk"
    onClick={[Function]}
  >
    default
  </button>,
  <button
    className="sc-bxivhb gGIZFk"
    onClick={[Function]}
  >
    primary
  </button>,
]
`;

exports[`Storyshots Tooltip default 1`] = `
<div>
  <button
    className="sc-bxivhb KIirr"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Tooltip empty 1`] = `
<div>
  
</div>
`;

exports[`Storyshots Tooltip hidden 1`] = `
<div>
  <button
    className="sc-bxivhb hbvGOM"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Tooltip top 1`] = `
<div>
  <button
    className="sc-bxivhb hbvGOM"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Click me
  </button>
</div>
`;
